--- a/CSS/stats.css
+++ b/CSS/stats.css
@@ -1,3 +1,15 @@
+/* Large desktop */
+@media (min-width: 1200px) { ... }
+ 
+/* Portrait tablet to landscape and desktop */
+@media (min-width: 768px) and (max-width: 979px) { ... }
+ 
+/* Landscape phone to portrait tablet */
+@media (max-width: 767px) { ... }
+ 
+/* Landscape phones and down */
+@media (max-width: 480px) { ... }
+
 .subData{
 	font-size: 12px;
 	color: gray;
@@ -10,5 +22,20 @@
 }
 
 .rank{
-	margin-top: 12px;
+	margin-top: 12px !important;
+	margin-left: 10px !important;
+	font-size: 20px !important;
+}
+
+.container{
+	margin-top: 100px;
+}
+
+#analysisGraph{
+	padding-top: 36px;
+	padding-bottom: 17px;
+	padding-right: 118px;
+	margin-left: -10px;
+	width: 698px !important;
+	height: 517px !important;
 }
